# profit-sharing-api

./: .flake8  .gitignore  README.md
.github/workflows/: pythonpackage.yml
dj_stone_profit_sharing_api/: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  README.rst  local.yml  manage.py  production.yml  setup.cfg
dj_stone_profit_sharing_api/.envs/.local/: .django  .postgres
dj_stone_profit_sharing_api/config/: api_router.py  urls.py  wsgi.py
dj_stone_profit_sharing_api/config/settings/: base.py  local.py  production.py  test.py
dj_stone_profit_sharing_api/custom_packages/: profit_calc-0.1.0-py3-none-any.whl
dj_stone_profit_sharing_api/dj_stone_profit_sharing_api/: conftest.py
dj_stone_profit_sharing_api/dj_stone_profit_sharing_api/templates/: base.html
dj_stone_profit_sharing_api/dj_stone_profit_sharing_api/users/: admin.py  apps.py  urls.py
dj_stone_profit_sharing_api/docs/: conf.py  index.rst
dj_stone_profit_sharing_api/docs/pycharm/: configuration.rst
dj_stone_profit_sharing_api/profit_sharing/: admin.py  apps.py  baker_recipes.py  filters.py  managers.py  models.py  serializers.py  specifications.py  views.py
dj_stone_profit_sharing_api/profit_sharing/migrations/: 0001_initial.py
dj_stone_profit_sharing_api/requirements/: base.txt  local.txt
dj_stone_profit_sharing_api/schemas/: department.json  employee.json
profit_calc/: .flake8  README.rst  pyproject.toml
profit_calc/profit_calc/: __init__.py  bags.py  calculation.py  specifications.py
profit_calc/tests/: conftest.py  test_profit_calc.py
(+12 files in other folders)
