[tool.poetry]
name = "profit_calc"
version = "0.1.0"
description = ""
authors = ["Daniel Santos <daniel.martins@lumedigital.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
assertpy = "^1.0"
coverage = "^5.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
